# Playbot

./: .gitignore  MCP功能说明.md  PRD.md  RELEASE_NOTES.md  add_imported_components_field.py  analyze_cases.py  check_components.py  check_db_schema.py  check_keyboard_page.py  enhance_page_analyzer.py  fix_associations.py  fix_build_tree.py  fix_description_length.py  fix_field_name.py  fix_frontend_components.py  fix_lines_directly.py  fix_regex_escape.py  fix_regex_final.py  fix_regex_v2.py  fix_save_components.py  fix_start.py  integrate_comment_extraction.py  migrate_add_comments.py  playbot_architecture_plan.md  query_db.py  read_session.py  setup_test_project.py  start.py  temp_check.py  update_build_tree_response.py  update_db_model.py  update_generate_route.py  update_mcp_analyzer.py  update_mcp_call.py  update_page_tree.py  update_page_tree_save.py  update_version.py
server/: migrate_add_description.py  modify14.py  pyproject.toml  query.py  query2.py  query_page.py  start_server.py  temp_out.json  test_mcp_analyzer.py
server/app/: main.py
server/app/agents/: __init__.py  langfuse_utils.py  schemas.py  test_case_agent.py  test_case_agent_v2.py
server/app/core/: config.py  websocket.py
server/app/models/: database.py  semantic_ir.py
server/app/routers/: execute.py  generate.py  generate_backup.py  page_tree.py  project.py  recording.py  settings.py  testcase.py
server/app/schemas/: schemas.py  test_schema.py
server/app/services/: action_normalizer.py  analyzer.py  comment_extractor.py  component_analyzer.py  coverage_analyzer.py  execution_engine.py  (+11 more)
(+26 files in other folders)
